populate log in UI with backend api populate sign up page with backend api modify login and signup pages to respond to api add css for user feedback div's
[Delivers #161200151]

--- a/UI/index.html
+++ b/UI/index.html
@@ -33,27 +33,32 @@
                 <div class="avatar">
                         <img src = "image/avat3.png">
                     </div>
-            <input type="text" name="name" placeholder="Your Username" required> <p></p>
-            <input type="email" name="email" placeholder="youremail@gmail.com" required> <p></p> 
-            <input type="text" name="name" placeholder="Home Address"> <p></p>
-            <input type="password" placeholder="password" required><p></p>
-            <input type="password" placeholder="confirm password" required><p></p>
+            <input type="text" id = "username" name="name" placeholder="Your Username" required> <p></p>
+            <input type="email" id = "email" name="email" placeholder="youremail@gmail.com" required> <p></p> 
+            <input type="text" id = "address" name="name" placeholder="Home Address"> <p></p>
+            <input type="password" id = "password" placeholder="password" required><p></p>
+            <input type="password" id = "confirm" placeholder="confirm password" required><p></p>
             <input type="submit" value="Sign Up" id ="submit">
+            <div id="output"> </div>
             <div id="label"><label>Have an account?<a onclick = "login()" > Log in</a></label></div>
+            <div id="danger"></div>
+            <div id="success"></div>
         </form>
         <div id = "logini">
                 <div class="avatar">
                         <img src = "image/avat3.png">
                     </div>
-                <form action="home.html">
-                    <input type="text" name="name" placeholder="Username" required> <p></p>
-                    <input type="password" placeholder="password" required><p></p>
-                    <input type="submit" value="Log In" id ="submit">
+                <form id="login_form">
+                    <input type="text" id="login_username" name="name" placeholder="Username" required> <p></p>
+                    <input type="password" id="login_password" placeholder="password" required><p></p>
+                    <input type="submit" value="Log In" id ="submit2">
                     <div id= "label"><label>Don't have an account? <a href="index.html">Register</a></label></div>
+                    <div id="danger2"></div>
+                    <div id="success"></div>
                 </form>
         </div>
 </div>
 </section> 
-<script src="./javascript/script.js"></script>
+<script src="./javascript/index.js"></script>
 </body>
 </html>
