populate log in UI with backend api populate sign up page with backend api modify login and signup pages to respond to api add css for user feedback div's
[Delivers #161200151]

--- a/UI/index.html
+++ b/UI/index.html
@@ -22,7 +22,7 @@
         </h3>
     </p><p>
         <h3>
-            Join the world’s food delivery service<br>
+            Join the world’s fastest food delivery service<br>
             Register to get started
         </h3>
     </p>
