feat(menu): add item to menu modify add_food.html modify menu html to accept data from api modify menu.js to allow adding a  new item add getmenu.js to get item from api and display in menu page
[Derivers #161308989]

--- a/UI/add_food.html
+++ b/UI/add_food.html
@@ -20,7 +20,7 @@
     <ul>
         <li>
             <li><a href="home.html">Home</a></li>
-            <li><a href="menu.html">OnMenu</a></li>
+            <li><a id ="onmenu" href="menu.html">OnMenu</a></li>
             <li><a href="add_food.html">Admin</a></li>
             <li><a href="index.html">Logout</a></li>
     </ul>
