--- a/UI/menu.html
+++ b/UI/menu.html
@@ -28,43 +28,7 @@
 </header>
 <section id="foods">
     <div class="container">
-        <div class = "food">
-            <img src = "image/noodles.jpg">
-            <h3>Noodles</h3>with tomato and gound onion in oramic. <br>
-            <span class ="cost">price: shs.10k</span>
-                <span class="add"><a href="#welcome"><button >Order</button></a></span>
-        </div>
-
-        <div class = "food">
-                <img src = "image/pizza.jpeg">
-                <h3>Pizza</h3>A pepperoni pizza along with
-                 yellow liquid and ice cubes <br>
-                <span class ="cost">price: shs.16k</span>
-                <span class="add"><a href="#welcome"><button >Order</button></a></span>            </div>
-
-            <div class = "food">
-                    <img src = "image/cake.jpeg">
-                    <h3>Beef Cake</h3>ground beef,eggs,vegetable oil,ground veal. <br>
-                        <span class ="cost">price: shs.50k</span>
-                        <span class="add"><a href="#welcome"><button >Order</button></a></span>                </div>
-
-        <div class = "food">
-            <img src = "image/burger2.jpeg">
-            <h3>vegetable burger</h3>milk, strawberry, tomato and cornflakes<br>
-                <span class ="cost">price: shs.12k</span>
-                <span class="add"><a href="#welcome"><button >Order</button></a></span>        </div>
-        <div class = "food">
-            <img src = "image/luwombo.jpg">
-            <h3>Luwombo</h3>milk, strawberry, tomato and cornflakes<br>
-                <span class ="cost">price: shs.13k</span>
-                <span class="add"><a href="#welcome"><button >Order</button></a></span>        </div>
-
-        <div class = "food">
-            <img src = "image/luwombo2.png">
-            <h3>Strawberry</h3>milk, strawberry,tomato and cornflakes<br>
-                <span class ="cost">price: shs.20k</span>
-                <span class="add"><a href="#welcome"><button >Order</button></a></span>        </div>
-
+    <span id ="cost"></span>
         <div id="welcome" class="popcover">
                 <div class="popup">
                     <h2>welcome</h2>
@@ -81,6 +45,7 @@
             </div>
     </div>
 </section> 
-
+</section>
+<script src = "./javascript/getmenu.js"></script>
 </body>
 </html>
