feat(post-order): User should be able to request for any meal on the menu modify getmenu.js to work on adding a menu item modify menu.html to pop up a location model get meal id from the menu page [Delivers #161348631]

--- a/UI/menu.html
+++ b/UI/menu.html
@@ -27,22 +27,24 @@
 </div>
 </header>
 <section id="foods">
-    <div class="container">
-    <span id ="cost"></span>
-        <div id="welcome" class="popcover">
-                <div class="popup">
-                    <h2>welcome</h2>
-                    <a class="close" href="order_list.html">&times;</a>
-                    <div class="content">
-                        Thank you for coming
-                        <form action="order_list.html">
-                        <input type="text" placeholder="Enter your location" required><br>
-                        <input id="submit" type="submit" value="submit">
-                    </form>
-                    </div>
-                </div>
-        
+<div class="container">
+<div id = "success"></div>
+<div id = "danger"></div>
+<span id ="cost"></span>
+    <div id="welcome" class="popcover">
+        <div class="popup">
+            <h2>welcome</h2>
+            <a class="close" href="order_list.html">&times;</a>
+            <div class="content">
+                Thank you for Eating with Us
+                <form action="order_list.html">
+                <input type="text" placeholder="Enter Your Current Location" required><br>
+                <input id="submit" type="submit" value="submit">
+            </form>
             </div>
+        </div>
+    
+        </div>
     </div>
 </section> 
 </section>
