feat(user-history):Users should view their previous order requests modify index.js modify order_list.html to display previous dynamic order item for a user create order_list.js to connect history api to the UI
[Delivers #161406592]

--- a/UI/order_list.html
+++ b/UI/order_list.html
@@ -34,39 +34,11 @@ come back next time</h4></span><p></p>
 <h3>Your Recent Orders</h3>
 <button id ="btn_order" onclick="location.href='home.html'">Order Now</button>
 <hr>
-<table>
-        <tr>
-            <th id ="num_id">Order Id</th>
-            <th>Name</th>
-            <th>Customer </th>
-            <th>Costs</th>
-            <th>Date</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Luwombo</td>
-            <td>immy</td>
-            <td>shs.20k</td>
-            <td>24/03/2018</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Pilawo</td>
-            <td>Immy</td>
-            <td>shs.10k</td>
-            <td>23/06/2018</td>
-            
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td>Total</td>
-            <td>shs.60k</td>
-                
-            </tr>
+<div id = "history">
     </table>
 </div>
 </div>
 </section>
+<script src = "./javascript/order_list.js"></script>
 </body>
 </html>
