--- a/UI/order.html
+++ b/UI/order.html
@@ -17,7 +17,7 @@
     <div id = "menu">
     <ul>
         <li><div class="search">
-                <input type="text" placeholder="search here...">
+                <input id ="search" type="text" placeholder="Enter order id...">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="menu.html">OnMenu</a></li>
                 <li><a href="add_food.html">Admin</a></li>
@@ -29,58 +29,12 @@
 <div class="container">
 <div class="inner">
 <h1> Manage Customer Orders</h1>
-<table>
-        <tr>
-            <th id ="num_id">Order Id</th>
-            <th>Name</th>
-            <th>Customer </th>
-            <th>Location </th>
-            <th>Costs</th>
-            <th>Date</th>
-            <th></th>
-            <th></th>
-            <th>Completed</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>katogo</td>
-            <td>immy</td>
-            <td>munyonyo</td>
-            <td>shs.20k</td>
-            <td>24/03/2018</td>
-            <td><button  class="btn_edit" >Accept</button></td>
-            <td><button class="btn_delete" >Decline</button></td>
-            <td><input type="checkbox" id ="checkbox">
-                <span class="checkmark"></span></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>luwombo</td>
-            <td>Ivan</td>
-            <td>Ggaba</td>
-            <td>shs.30k</td>
-            <td>23/06/2018</td>
-            <td><button class="btn_edit" >Accept</button></td>
-            <td><button class="btn_delete" >Decline</button></td>
-            <td><input type="checkbox" id ="checkbox">
-                <span class="checkmark"></span></td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Pilawo</td>
-            <td>Kayima</td>
-            <td>Wandegeya</td>
-            <td>shs.10k</td>
-            <td>23/06/2018</td>
-            <td><button class="btn_edit" >Accept</button></td>
-            <td><button class="btn_delete" >Decline</button></td>
-            <td><input type="checkbox" id ="checkbox">
-                <span class="checkmark"></span></td>
-        </tr>
-    </table>
+<div id = "data"></div>
+<div id = "danger"></div>
+        
 </div>
 </div>
 </section>
-<script src="./javascript/script.js"></script>
+<script src="./javascript/orders.js"></script>
 </body>
 </html>
