--- a/menu.html
+++ b/menu.html
@@ -20,8 +20,8 @@
                 <input type="text" placeholder="search here...">
             </div></li>
         <li><a href="home.html">Home</a></li>
-        <li><a href="menu.html">OnMenu</a></li>
-        <li><a href="add_food.html">Admin</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="order_list.html">Orders</a></li>
         <li><a href="index.html">Logout</a></li>
     </ul>
 </div>
