--- a/home.html
+++ b/home.html
@@ -29,8 +29,10 @@
 <section id="cover">
 <div class="container">
 <div class="intro">
-    <h1>Order your favourite food<br> 
-            from any where..</h1>
+    <h1>We offer all kind of food,<br>
+            At the cheapest cost with
+            a free fastest delivery service.<br> 
+            Make your order now..</h1>
     </div>
 </div>
 </section>
