--- a/order.html
+++ b/order.html
@@ -19,7 +19,7 @@
         <li><div class="search">
                 <input id ="search" type="text" placeholder="Enter order id...">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="menu.html">OnMenu</a></li>
+                <li><a href="menu.html">Menu</a></li>
                 <li><a href="add_food.html">Admin</a></li>
                 <li><a href="index.html">Logout</a></li>
     </ul>
@@ -29,8 +29,8 @@
 <div class="container">
 <div class="inner">
 <h1> Manage Customer Orders</h1>
-<div id = "data"></div>
 <div id = "danger"></div>
+<div id = "data"></div>
         
 </div>
 </div>
