--- a/menu.html
+++ b/menu.html
@@ -37,8 +37,8 @@
             <a class="close" href="order_list.html">&times;</a>
             <div class="content">
                 Thank you for Eating with Us
-                <form action="order_list.html">
-                <input type="text" placeholder="Enter Your Current Location" required><br>
+                <form action="order_list.html" id = "popup">
+                <input id = "location" type="text" placeholder="Enter Your Current Location" required><br>
                 <input id="submit" type="submit" value="submit">
             </form>
             </div>
