--- a/home.html
+++ b/home.html
@@ -38,6 +38,7 @@
 </section>
 <section id="foods">
     <div class="container">
+    <span id ="cost"></span>
         <div class = "food">
             <img src = "image/noodles.jpg">
             <h3>Noodles</h3>with tomato and gound onion in oramic. <br>
@@ -97,5 +98,6 @@
     <h3>Luwumbo Fast Foods, copyright &copy; 2018 <br>
     By <small>kasule joseph</small></h3>
 </footer>
+<script src = "./javascript/getmenu.js"></script>
 </body>
 </html>
