--- a/edit.html
+++ b/edit.html
@@ -17,7 +17,7 @@
     <div id = "menu">
     <ul>
         <li><div class="search">
-        <input type="text" placeholder="search here...">
+        <input id="search" type="text" placeholder="search here...">
         <li><a href="home.html">Home</a></li>
         <li><a href="menu.html">OnMenu</a></li>
         <li><a href="add_food.html">Admin</a></li>
@@ -28,89 +28,13 @@
 <section id="profile">
 <div class="container">
 <div class="inner">
-<h1> Recent Food Items</h1>
-
-<table>
-        <tr>
-            <th id ="num_id">NO</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Price</th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>katogo</td>
-            <td>Matooke, beans and greens</td>
-            <td>shs.5k</td>
-            <td><button onclick="location.href='menu.html'" class="btn_add" >Add2Menu</button></td>
-            <td><button class="btn_edit" >Edit</button></td>
-            <td><button class="btn_delete" >Remove</button></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>luwombo</td>
-            <td>pounded meat, fried kitchen, matooke</td>
-            <td>shs.30K</td>
-            <td><button onclick="location.href='menu.html'" class="btn_add" >Add2Menu</button></td>
-            <td><button class="btn_edit" >Edit</button></td>
-            <td><button class="btn_delete" >Remove</button></td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Pilawo</td>
-            <td>fried pakistan rice and beef
-                ?</td>
-            <td>shs.29k</td>
-            <td><button onclick="location.href='menu.html'" class="btn_add" >Add2Menu</button></td>
-            <td><button class="btn_edit" >Edit</button></td>
-            <td><button class="btn_delete" >Remove</button></td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>Pizza</td>
-            <td>A pepperoni pizza along with yellow liquid and ice cubes
-                </td>
-            <td>shs.16k</td>
-            <td><button onclick="location.href='menu.html'" class="btn_add" >Add2Menu</button></td>
-            <td><button class="btn_edit" >Edit</button></td>
-            <td><button class="btn_delete" >Remove</button></td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>Beef Cake</td>
-            <td>ground beef,eggs,vegetable oil,ground veal. 
-                </td>
-            <td>shs.50k</td>
-            <td><button onclick="location.href='menu.html'" class="btn_add" >Add2Menu</button></td>
-            <td><button class="btn_edit" >Edit</button></td>
-            <td><button class="btn_delete" >Remove</button></td>
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>Noodles</td>
-            <td> with tomato and gound onion in oramic. 
-                ?</td>
-            <td>shs.10k</td>
-            <td><button onclick="location.href='menu.html'" class="btn_add" >Add2Menu</button></td>
-            <td><button class="btn_edit" >Edit</button></td>
-            <td><button class="btn_delete" >Remove</button></td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>Strawberry</td>
-            <td>milk, strawberry,tomato and cornflakes
-                </td>
-            <td>shs.20k</td>
-            <td><button onclick="location.href='menu.html'" class="btn_add" >Add2Menu</button></td>
-            <td><button class="btn_edit" >Edit</button></td>
-            <td><button class="btn_delete" >Remove</button></td>
-        </tr>
-    </table>
+<h1> Manage Menu Items</h1>
+<div id = "success"></div>
+<div id = "danger"></div>
+<div id= "edit"></div>
 </div>
 </div>
 </section>
+<script src="./javascript/edit.js"></script>
 </body>
 </html>
