add responsiveness in the UI make the UI more interactive with the user [Derivers #161406592] [Delivers #161407297] [Delivers #161530808]

--- a/home.html
+++ b/home.html
@@ -14,11 +14,11 @@
 <header>
 <div id="nav"><h1><span id ="highlight">F</span>AST 
     <span id ="highlight">F</span>OOD <span id ="highlight">F</span>AST</h1></div>
+        <div class="search">
+                <input type="text" placeholder="search here...">
+            </div>
     <div id = "menu">
     <ul>
-        <li><div class="search">
-                <input type="text" placeholder="search here...">
-            </div></li>
         <li><a href="home.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
         <li><a href="order_list.html">Orders</a></li>
