--- a/order.html
+++ b/order.html
@@ -14,14 +14,15 @@
 <header>
 <div id="nav"><h1><span id ="highlight">F</span>AST 
     <span id ="highlight">F</span>OOD <span id ="highlight">F</span>AST</h1></div>
+    <div class="search">
+                <input id ="search" type="text" placeholder="Enter order id...">
+                </div>
     <div id = "menu">
     <ul>
-        <li><div class="search">
-                <input id ="search" type="text" placeholder="Enter order id...">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="add_food.html">Admin</a></li>
-                <li><a href="index.html">Logout</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="add_food.html">Admin</a></li>
+        <li><a href="index.html">Logout</a></li>
     </ul>
 </div>
 </header>
