--- a/add_food.html
+++ b/add_food.html
@@ -22,6 +22,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a id ="onmenu" href="menu.html">Menu</a></li>
             <li><a href="add_food.html">Admin</a></li>
+            <li><a id = "orders" href="order_list.html">Orders</a></li>
             <li><a href="index.html">Logout</a></li>
     </ul>
 </div>
