add image upload functionality

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
 <div class="container">
 <div class="intro">
     <h1>We offer all kind of food,<br>
-            At the cheapest cost with
+            At the affordable price with
             a free fastest delivery service.<br> 
             Make your order now..</h1>
     </div>
