--- a/add_food.html
+++ b/add_food.html
@@ -54,5 +54,6 @@
 </div>
 </section>
 <script src = "./javascript/menu.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
