--- a/order_list.html
+++ b/order_list.html
@@ -28,6 +28,7 @@
 </header>
 <section id="profile">
 <div class="container">
+<div id = "danger"></div>
 <div class="inner">
 <span id ="thank"><h4> Thank for Eating with us..<br>
 come back next time</h4></span><p></p>
